final keyclock implementation

--- a/keyclock-oauth2/src/main/resources/application.properties
+++ b/keyclock-oauth2/src/main/resources/application.properties
@@ -1,1 +1,2 @@
 spring.application.name=keyclock-oauth2
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/spring-keyclock-realms
