--- a/keyclock-oauth2/src/main/resources/application.properties
+++ b/keyclock-oauth2/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=keyclock-oauth2
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/spring-keyclock-realms
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/spring-keyclock-realm
+server.port=9090
